// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Banner component should render as expected when there is a token 1`] = `
<div
  className="hero"
>
  <div
    className="text container"
  >
    <h1>
      Use,
      <br />
      Maintain,
      <br />
      Repair,
      <br />
      Repeat.
      <br />
    </h1>
    <p>
      We take care of your maintenance and repair hassles, so you don't have to.
    </p>
    <Link
      className="btn btn-tertiary get-started"
      replace={false}
      to="/admin/dashboard"
    >
      Get started
    </Link>
  </div>
</div>
`;

exports[`Testing Banner component should render as expected when there is no token 1`] = `
<div
  className="hero"
>
  <div
    className="text container"
  >
    <h1>
      Use,
      <br />
      Maintain,
      <br />
      Repair,
      <br />
      Repeat.
      <br />
    </h1>
    <p>
      We take care of your maintenance and repair hassles, so you don't have to.
    </p>
    <Link
      className="btn btn-tertiary get-started"
      replace={false}
      to="/signup"
    >
      Get started
    </Link>
  </div>
</div>
`;

exports[`Testing HomeBody component should render as expected 1`] = `
<div
  className="how-it-works center"
>
  <h2>
    How It Works
  </h2>
  <div
    className="flex"
  >
    <div>
      <i
        className="icon ion-paper-airplane"
      />
      <h4>
        Make a request
      </h4>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
      </p>
    </div>
    <div>
      <i
        className="icon ion-leaf"
      />
      <h4>
        Request accepted
      </h4>
      <p>
        Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
      </p>
    </div>
    <div>
      <i
        className="icon ion-ios-bolt"
      />
      <h4>
        Request resolved
      </h4>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna veniam.
      </p>
    </div>
  </div>
</div>
`;

exports[`Testing HomeFooter component should render as expected when there is a token 1`] = `
<p
  className="center"
>
  <Link
    className="btn btn-small btn-primary get-started"
    replace={false}
    to="/admin/dashboard"
  >
    Click here
  </Link>
    to get started
</p>
`;

exports[`Testing HomeFooter component should render as expected when there is no token 1`] = `
<p
  className="center"
>
  <Link
    className="btn btn-small btn-primary get-started"
    replace={false}
    to="/signup"
  >
    Click here
  </Link>
    to get started
</p>
`;
